typesafe-builders/tests/ui/reject/field_attr/decay/no_generic_2.rs
mod other {
	use typesafe_builders::prelude::*;

	#[derive(Builder)]
	pub struct Struct {
		#[builder(decay)]
		x: &'static u8,
	}
}

fn main() {
}
